[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/fonts/FFFFORWA.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/terrain/CombatGuidebook.gd" type="Script" id=2]
[ext_resource path="res://assets/terrain/hub_level/book_stand.png" type="Texture" id=3]
[ext_resource path="res://assets/fonts/Born2bSportyV2.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/UI/quiticon.png" type="Texture" id=5]
[ext_resource path="res://assets/UI/book_textbox.png" type="Texture" id=6]
[ext_resource path="res://assets/UI/previousicon.png" type="Texture" id=7]
[ext_resource path="res://assets/UI/nexticon.png" type="Texture" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 43.8902, 49.2892 )

[sub_resource type="DynamicFont" id=2]
size = 36
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 48
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = ExtResource( 4 )

[node name="CombatGuidebook" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 5, 5 )
texture = ExtResource( 3 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0.448471, 1.83575 )
shape = SubResource( 1 )

[node name="Label" type="RichTextLabel" parent="."]
margin_left = -90.0
margin_top = -155.0
margin_right = 92.0
margin_bottom = -48.0
custom_fonts/bold_font = SubResource( 2 )
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[b]Combat Guide[/b][img=40]res://assets/UI/icon_E.png[/img]"
text = "Combat Guide"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Plaque" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="Plaque"]
visible = false
anchor_left = 0.5
anchor_top = 0.33
anchor_right = 0.5
anchor_bottom = 0.33
margin_left = -540.0
margin_top = -237.6
margin_right = 534.0
margin_bottom = 484.4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="Plaque/Control"]
anchor_left = 0.518
anchor_top = 0.321
anchor_right = 0.518
anchor_bottom = 0.321
margin_left = -436.332
margin_top = -81.762
margin_right = 435.668
margin_bottom = 455.238
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Header" type="RichTextLabel" parent="Plaque/Control/NinePatchRect"]
margin_left = 75.0
margin_top = 52.0
margin_right = 820.0
margin_bottom = 100.0
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "========= [color=#754d27]Guide to Combat[/color] ========="
text = "========= Guide to Combat ========="
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CloseButton" type="TextureButton" parent="Plaque/Control/NinePatchRect"]
margin_left = 796.471
margin_top = 7.6884
margin_right = 836.471
margin_bottom = 47.6884
rect_scale = Vector2( 1.5, 1.5 )
texture_normal = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextButton" type="TextureButton" parent="Plaque/Control/NinePatchRect"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -82.0
margin_top = -82.0
margin_right = -42.0
margin_bottom = -42.0
rect_scale = Vector2( 2, 2 )
texture_normal = ExtResource( 8 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PrevButton" type="TextureButton" parent="Plaque/Control/NinePatchRect"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -162.05
margin_top = -82.0
margin_right = -122.05
margin_bottom = -42.0
rect_scale = Vector2( 2, 2 )
texture_normal = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Page1" type="Control" parent="Plaque/Control/NinePatchRect"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Text" type="RichTextLabel" parent="Plaque/Control/NinePatchRect/Page1"]
anchor_right = 0.153
margin_left = 75.0
margin_top = 96.0
margin_right = 783.88
margin_bottom = 238.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 4 )
bbcode_enabled = true
bbcode_text = "[color=#23a9de]Melee Attacks[/color] are your primary source of damage. Press [color=red]Enter[/color] or [color=red]X[/color] to strike enemies down within close range.
[color=#23a9de]Charged Attacks[/color] are more powerful than melee attacks, but they require time"
text = "Melee Attacks are your primary source of damage. Press Enter or X to strike enemies down within close range.
Charged Attacks are more powerful than melee attacks, but they require time"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Page2" type="Control" parent="Plaque/Control/NinePatchRect"]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="Text" type="RichTextLabel" parent="Plaque/Control/NinePatchRect/Page2"]
anchor_right = 0.153
margin_left = 75.0
margin_top = 96.0
margin_right = 676.584
margin_bottom = 169.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 4 )
bbcode_enabled = true
bbcode_text = "Page 2"
text = "Page 2"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Page3" type="Control" parent="Plaque/Control/NinePatchRect"]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="Text" type="RichTextLabel" parent="Plaque/Control/NinePatchRect/Page3"]
anchor_right = 0.153
margin_left = 75.0
margin_top = 96.0
margin_right = 676.584
margin_bottom = 169.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 4 )
bbcode_enabled = true
bbcode_text = "Page 3"
text = "Page 3"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
[connection signal="pressed" from="Plaque/Control/NinePatchRect/CloseButton" to="." method="_on_CloseButton_pressed"]
[connection signal="pressed" from="Plaque/Control/NinePatchRect/NextButton" to="." method="_on_NextButton_pressed"]
[connection signal="pressed" from="Plaque/Control/NinePatchRect/PrevButton" to="." method="_on_PrevButton_pressed"]
